bank-app/user-service/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: quay.io/alexocc/user-service:latest
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 9080
