bank-app/user-service/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  ports:
  - port: 9080
    targetPort: 9080
  selector:
    app: user-service
